# internal/infra/boundaries/http/swagger/swagger.json
@@ -458,6 +458,13 @@
                 "id": {
                     "type": "string"
                 },
+                "kind": {
+                    "type": "string",
+                    "enum": [
+                        "numeric",
+                        "categorical"
+                    ]
+                },
                 "name": {
                     "type": "string"
                 }
